--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "iron-icon": "PolymerElements/iron-icon#^1.0.0",
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
-    "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
+    "iron-media-query": "PolymerElements/iron-media-query#^1.0.8",
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
@@ -19,7 +19,10 @@
     "paper-slider": "PolymerElements/paper-slider#^1.0.11",
     "google-youtube": "GoogleWebComponents/google-youtube#^1.2.1",
     "paper-search": "^1.1.12",
-    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3"
+    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
+    "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
+    "app-localize-behavior": "PolymerElements/app-localize-behavior#^0.10.0",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
