--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,11 @@
 {
-    "database": {
-        "rules": "database.rules.json"
-    },
-    "hosting": {
-        "public": "build/bundled",
-        "rewrites": [{
-            "source": "**/!{*.*}",
-            "destination": "/index.html"
-        }]
-    }
+  "hosting": {
+    "public": "build/bundled",
+    "rewrites": [
+      {
+        "source": "**/!{*.*}",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
